add a static method addJDK11VmArgs in JBossWSTest to support jdk11-ea( --add-modules java.se)